--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ main {
 }
 
 .face {
+    border: 1px solid #99CEA8;
     width: 100%;
     height: 100%;
     background-color: #a7e9af;
@@ -57,6 +58,10 @@ main {
     width: 100px;
     height: 100px;
     margin: 23px 0 0 10px;
+}
+
+.nao-clica {
+    pointer-events: none;
 }
 
 @media (max-width: 600px) {
